[metadata]
name = pyre2
version = 0.3.2-1
author = The pyre2 Authors
author_email = andreas@unstable.nl
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = Python wrapper for Google\'s RE2 using Cython
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/andreasvc/pyre2
license = BSD
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6

setup_requires =
    cython>=0.29
    scikit-build>=0.10

zip_safe = False

[options.extras_require]
test =
    nose

[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = txt
exe = 1
#with-coverage = 1
#cover-package = py_re2
#cover-min-percentage = 90
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
